# vulkan-guide

./: .gitignore
android-project/app/: build.gradle
android-project/app/jni/SDL/: .gitignore
android-project/app/jni/src/: Android.mk  main.cpp
android-project/app/src/main/: AndroidManifest.xml
android/proj/: gpu_driven_sign  local.properties  sign
android/proj/app/: build.gradle
android/proj/app/release/: output-metadata.json
android/proj/app/src/main/: AndroidManifest.xml
android/proj/app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt
android/proj/assets/assets_export/FlightHelmet/: FlightHelmet_Materials_GlassPlasticMat_Normal.tx  FlightHelmet_Materials_GlassPlasticMat_OcclusionRoughMetal.tx  FlightHelmet_Materials_LeatherPartsMat_Normal.tx  FlightHelmet_Materials_LensesMat_BaseColor.tx  (+3 more)
asset-baker/: asset_main.cpp
assetlib/: asset_loader.cpp  mesh_asset.cpp
assets_export/FlightHelmet/: FlightHelmet.pfb  FlightHelmet_Materials_GlassPlasticMat_BaseColor.tx  FlightHelmet_Materials_LeatherPartsMat_BaseColor.tx  FlightHelmet_Materials_LeatherPartsMat_OcclusionRoughMetal.tx  FlightHelmet_Materials_LensesMat_Normal.tx  FlightHelmet_Materials_MetalPartsMat_BaseColor.tx  FlightHelmet_Materials_MetalPartsMat_OcclusionRoughMetal.tx  FlightHelmet_Materials_RubberWoodMat_BaseColor.tx  FlightHelmet_Materials_RubberWoodMat_OcclusionRoughMetal.tx
assets_export/FlightHelmet/FlightHelmet_GLTF/: MAT_1_RubberWoodMat.mat  MAT_3_MetalPartsMat.mat  MAT_4_LeatherPartsMat.mat  MAT_5_LensesMat.mat  MESH_0_Hose_low.mesh  MESH_2_GlassPlastic_low.mesh  MESH_5_Lenses_low.mesh
assets_export/Sponza/: 1219024358953944284.tx  2051777328469649772.tx  2374361008830720677.tx  3455394979645218238.tx  3628158980083700836.tx  4910669866631290573.tx  5792855332885324923.tx  5823059166183034438.tx  6047387724914829168.tx  6593109234861095314.tx  6667038893015345571.tx  6772804448157695701.tx  7056944414013900257.tx  715093869573992647.tx  755318871556304029.tx  759203620573749278.tx  7815564343179553343.tx  8783994986360286082.tx  Sponza.pfb  white.tx
assets_export/Sponza/Sponza_GLTF/: MAT_10_.mat  MAT_13_.mat  MAT_14_.mat  MAT_15_.mat  MAT_16_.mat  MAT_1_.mat  MAT_20_.mat  MAT_22_.mat  MAT_23_.mat  MAT_24_.mat  MAT_4_.mat  MAT_6_.mat  MAT_7_.mat  MAT_8_.mat  MESH_0__PRIM_0.mesh  MESH_0__PRIM_100.mesh  MESH_0__PRIM_102.mesh  MESH_0__PRIM_12.mesh  MESH_0__PRIM_14.mesh  MESH_0__PRIM_16.mesh  MESH_0__PRIM_17.mesh  MESH_0__PRIM_20.mesh  MESH_0__PRIM_22.mesh  MESH_0__PRIM_24.mesh  MESH_0__PRIM_26.mesh  MESH_0__PRIM_3.mesh  MESH_0__PRIM_30.mesh  MESH_0__PRIM_33.mesh  MESH_0__PRIM_34.mesh  MESH_0__PRIM_35.mesh  MESH_0__PRIM_36.mesh  MESH_0__PRIM_38.mesh  MESH_0__PRIM_42.mesh  MESH_0__PRIM_47.mesh  MESH_0__PRIM_50.mesh  MESH_0__PRIM_51.mesh  MESH_0__PRIM_52.mesh  MESH_0__PRIM_53.mesh  MESH_0__PRIM_55.mesh  MESH_0__PRIM_56.mesh  (+24 more)
extra-engine/: CMakeLists.txt  cvars.cpp  cvars.h  logger.h  material_system.cpp  material_system.h  player_camera.cpp  player_camera.h  vk_engine.cpp  vk_engine.h  vk_engine_scenerender.cpp  vk_profiler.h  vk_pushbuffer.cpp  vk_scene.h  vk_shaders.cpp  vk_shaders.h  vk_textures.cpp  vk_types.h
libs/Debug/: CMP_Core.lib  EtcLib.lib  bc6h.lib  bc7.lib  nvcore.lib  nvimage.lib  nvmath.lib  nvsquish.lib  nvthread.lib  nvtt.lib  posh.lib  rg_etc1.lib  squishd.lib
libs/Release/: bc6h.lib  bc7.lib  nvcore.lib  nvimage.lib  nvmath.lib  nvsquish.lib  nvthread.lib  posh.lib  rg_etc1.lib  squish.lib
shaders/: indirect_cull.comp  indirect_cull.comp.spv
(+102 files in other folders)
